[package]
name = "marchproxy-auth-filter"
version = "1.0.0"
edition = "2021"
authors = ["MarchProxy Contributors"]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
jsonwebtoken = "9.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
